--- a/app/src/main/res/layout/activity_avg_pass_key.xml
+++ b/app/src/main/res/layout/activity_avg_pass_key.xml
@@ -13,17 +13,20 @@
     android:background="#FFF">
 
         <ImageView
-            android:layout_width="255dp"
-            android:layout_height="100dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:id="@+id/grid"
             android:src="@drawable/grid"
+            android:contentDescription="@string/Grid"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="false"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_above="@+id/start_btn"
-            android:contentDescription="@string/Grid" />
+            android:layout_above="@+id/start_btn" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/start_btn"
             android:id="@+id/start_btn"
@@ -31,8 +34,9 @@
             android:textColor="#FFFFFF"
             android:enabled="true"
             android:padding="10dp"
+            android:width="250dp"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:width="250dp" />
+            android:layout_centerVertical="true"
+            android:layout_marginTop="20dp" />
 
-    </RelativeLayout>
+</RelativeLayout>
