--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,21 +9,24 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
+    tools:context=".AvgPassKeyActivity"
     android:background="#FFF">
 
     <ImageView
-        android:layout_width="255dp"
-        android:layout_height="100dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/grid"
         android:src="@drawable/grid"
+        android:contentDescription="@string/Grid"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="false"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/start_btn"
-        android:contentDescription="@string/Grid" />
+        android:layout_above="@+id/start_btn" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/start_btn"
         android:id="@+id/start_btn"
@@ -30,8 +34,9 @@
         android:textColor="#FFFFFF"
         android:enabled="true"
         android:padding="10dp"
+        android:width="250dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:width="250dp" />
+        android:layout_centerVertical="true"
+        android:layout_marginTop="20dp" />
 
 </RelativeLayout>
