--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
+    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_menu" tools:context="pistachio.com.biotap.Menu">
+    tools:showIn="@layout/activity_menu" tools:context="pistachio.com.biotap.Menu"
+    android:background="#fff">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
         android:id="@+id/login_btn"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="300dp"
 
         android:textStyle="bold"
+        android:textColor="#ffffff"
+        android:background="#4CAF50"
+        android:layout_above="@+id/stat_btn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="10dp"
         android:layout_alignRight="@+id/stat_btn"
         android:layout_alignEnd="@+id/stat_btn" />
 
@@ -29,10 +32,14 @@
         android:text="Statistics"
         android:id="@+id/stat_btn"
         android:textStyle="bold"
-        android:layout_below="@+id/login_btn"
+        android:background="#4CAF50"
+        android:textColor="#ffffff"
+        android:layout_marginBottom="10dp"
+        android:layout_above="@+id/register_btn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -40,20 +47,25 @@
         android:text="Register"
         android:id="@+id/register_btn"
         android:textStyle="bold"
-        android:layout_below="@+id/stat_btn"
-        android:layout_alignRight="@+id/stat_btn"
-        android:layout_alignEnd="@+id/stat_btn"
-        android:layout_alignParentLeft="true"
+        android:background="#4CAF50"
+        android:textColor="#ffffff"
+        android:singleLine="false"
+        android:layout_marginBottom="59dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/imageView"
+        android:layout_above="@+id/login_btn"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/biotap"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/login_btn"
-        android:src="@drawable/biotap"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
